==============
lxml changelog
==============

Latest changes
=======================

Features added
--------------

Bugs fixed
----------

* HTML parsing of Unicode strings could misdecode the input on some platforms.

* Crash in xmlfile() when closing open elements out of order in an error case.

Other changes
-------------


3.3.0beta2 (2013-12-20)
=======================

Features added
--------------

* ``iterparse()`` supports the ``recover`` option.

Bugs fixed
----------

* Crash in ``iterparse()`` for HTML parsing.

* Crash in target parsing with attributes.

Other changes
-------------

* The safety check in the read-only tree implementation (e.g. used by
  ``PythonElementClassLookup``) raises a more appropriate ``ReferenceError``
  for illegal access after tree disposal instead of an ``AssertionError``.
  This should only impact test code that specifically checks the original
  behaviour.


3.3.0beta1 (2013-12-12)
=======================

Features added
--------------

* New option ``handle_failures`` in ``make_links_absolute()`` and
  ``resolve_base_href()`` (lxml.html) that enables ignoring or
  discarding links that fail to parse as URLs.

* New parser classes ``XMLPullParser`` and ``HTMLPullParser`` for
  incremental parsing, as implemented for ElementTree in Python 3.4.

* ``iterparse()`` enables recovery mode by default for HTML parsing
  (``html=True``).

Bugs fixed
----------

* LP#1255132: crash when trying to run validation over non-Element (e.g.
  comment or PI).

* Error messages in the log and in exception messages that originated
  from libxml2 could accidentally be picked up from preceding warnings
  instead of the actual error.

* The ``ElementMaker`` in lxml.objectify did not accept a dict as
  argument for adding attributes to the element it's building. This
  works as in lxml.builder now.

* LP#1228881: ``repr(XSLTAccessControl)`` failed in Python 3.

* Raise ``ValueError`` when trying to append an Element to itself or