@@ -78,6 +78,13 @@
 #endif
 #endif
 
+#if PY_VERSION_HEX <= 0x03030000 && !(defined(CYTHON_PEP393_ENABLED) && CYTHON_PEP393_ENABLED)
+  #define PyUnicode_READY(op)       (0)
+  #define PyUnicode_GET_LENGTH(u)   PyUnicode_GET_SIZE(u)
+  #define PyUnicode_KIND(u)         (sizeof(Py_UNICODE))
+  #define PyUnicode_DATA(u)         ((void*)PyUnicode_AS_UNICODE(u))
+#endif
+
 /* PySlice_GetIndicesEx() has wrong signature in Py<=3.1 */
 #if PY_VERSION_HEX >= 0x03020000
 #  define _lx_PySlice_GetIndicesEx(o, l, b, e, s, sl) PySlice_GetIndicesEx(o, l, b, e, s, sl)
@@ -231,6 +238,10 @@ long _ftol2( double dblSource ) { return _ftol( dblSource ); }
 
 #define _getNs(c_node) \
         (((c_node)->ns == 0) ? 0 : ((c_node)->ns->href))
+
+#include <stdint.h>
+#define _lx__is_big_endian() \
+    (((union {uint32_t i; char c[4];}) {0x01020304}).c[0] == 1)
 
 /* Macro pair implementation of a depth first tree walker
  *
