@@ -1,3 +1,5 @@
+from libc.string cimport const_char
+
 from lxml.includes.tree cimport xmlDoc, xmlDict
 from lxml.includes.tree cimport xmlInputReadCallback, xmlInputCloseCallback
 from lxml.includes.xmlparser cimport xmlParserCtxt, xmlSAXHandler, xmlSAXHandlerV1
@@ -32,18 +34,18 @@ cdef extern from "libxml/HTMLparser.h":
                             char* chunk, int size, int terminate) nogil
 
     cdef xmlDoc* htmlCtxtReadFile(xmlParserCtxt* ctxt,
-                                  char* filename, char* encoding,
+                                  char* filename, const_char* encoding,
                                   int options) nogil
     cdef xmlDoc* htmlCtxtReadDoc(xmlParserCtxt* ctxt,
-                                 char* buffer, char* URL, char* encoding,
+                                 char* buffer, char* URL, const_char* encoding,
                                  int options) nogil
     cdef xmlDoc* htmlCtxtReadIO(xmlParserCtxt* ctxt, 
                                 xmlInputReadCallback ioread, 
                                 xmlInputCloseCallback ioclose, 
                                 void* ioctx,
-                                char* URL, char* encoding,
+                                char* URL, const_char* encoding,
                                 int options) nogil
     cdef xmlDoc* htmlCtxtReadMemory(xmlParserCtxt* ctxt,
                                     char* buffer, int size,
-                                    char* filename, char* encoding,
+                                    char* filename, const_char* encoding,
                                     int options) nogil
